--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,10 @@
 			<version>1.5.3</version>
 		</dependency>
 	</dependencies>
+	
+	<properties>
+    	<maven.compiler.source>1.6</maven.compiler.source>
+    	<maven.compiler.target>1.6</maven.compiler.target>
+  	</properties>
 
 </project>
